parte2/ParLinguaggio.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParLinguaggio
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified AbsLinguaggio
import LexLinguaggio

}

%name pProgram Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '&&' { PT _ (TS _ 3) }
  '(' { PT _ (TS _ 4) }
  ')' { PT _ (TS _ 5) }
  '*' { PT _ (TS _ 6) }
  '+' { PT _ (TS _ 7) }
  ',' { PT _ (TS _ 8) }
  '-' { PT _ (TS _ 9) }
  '..' { PT _ (TS _ 10) }
  '/' { PT _ (TS _ 11) }
  ':' { PT _ (TS _ 12) }
  ';' { PT _ (TS _ 13) }
  '<' { PT _ (TS _ 14) }
  '<=' { PT _ (TS _ 15) }
  '=' { PT _ (TS _ 16) }
  '==' { PT _ (TS _ 17) }
  '>' { PT _ (TS _ 18) }
  '>=' { PT _ (TS _ 19) }
  '[' { PT _ (TS _ 20) }
  ']' { PT _ (TS _ 21) }
  'bool' { PT _ (TS _ 22) }
  'c_ptr' { PT _ (TS _ 23) }
  'c_ptrTo' { PT _ (TS _ 24) }
  'char' { PT _ (TS _ 25) }
  'else' { PT _ (TS _ 26) }
  'false' { PT _ (TS _ 27) }
  'if' { PT _ (TS _ 28) }
  'int' { PT _ (TS _ 29) }
  'proc' { PT _ (TS _ 30) }
  'real' { PT _ (TS _ 31) }
  'ref' { PT _ (TS _ 32) }
  'return' { PT _ (TS _ 33) }
  'string' { PT _ (TS _ 34) }
  'true' { PT _ (TS _ 35) }
  'var' { PT _ (TS _ 36) }
  'void' { PT _ (TS _ 37) }
  'while' { PT _ (TS _ 38) }
  '{' { PT _ (TS _ 39) }
  '||' { PT _ (TS _ 40) }
  '}' { PT _ (TS _ 41) }
  L_Ident  { PT _ (TV $$) }
  L_charac { PT _ (TC $$) }
  L_doubl  { PT _ (TD $$) }
  L_integ  { PT _ (TI $$) }
  L_quoted { PT _ (TL $$) }

%%

Ident :: { AbsLinguaggio.Ident }
Ident  : L_Ident { AbsLinguaggio.Ident $1 }

Char    :: { Char }
Char     : L_charac { (read $1) :: Char }

Double  :: { Double }
Double   : L_doubl  { (read $1) :: Double }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

String  :: { String }
String   : L_quoted { $1 }

Program :: { AbsLinguaggio.Program }
Program : ListTopDecl { AbsLinguaggio.Prog $1 }

TopDecl :: { AbsLinguaggio.TopDecl }
TopDecl : 'var' Ident ':' Type ';' { AbsLinguaggio.DVar $2 $4 }
        | 'var' Ident ':' Type '=' Exp ';' { AbsLinguaggio.DVarInit $2 $4 $6 }
        | 'proc' Ident '(' ListParam ')' ':' Type Block { AbsLinguaggio.DProc $2 $4 $7 $8 }

ListTopDecl :: { [AbsLinguaggio.TopDecl] }
ListTopDecl : {- empty -} { [] }
            | TopDecl ListTopDecl { (:) $1 $2 }

Param :: { AbsLinguaggio.Param }
Param : Intent Ident ':' Type { AbsLinguaggio.Par $1 $2 $4 }

ListParam :: { [AbsLinguaggio.Param] }
ListParam : {- empty -} { [] }
          | Param { (:[]) $1 }
          | Param ',' ListParam { (:) $1 $3 }

Intent :: { AbsLinguaggio.Intent }
Intent : {- empty -} { AbsLinguaggio.IIn }
       | 'ref' { AbsLinguaggio.IRef }

Type :: { AbsLinguaggio.Type }
Type : 'int' { AbsLinguaggio.TInt }
     | 'bool' { AbsLinguaggio.TBool }
     | 'real' { AbsLinguaggio.TReal }
     | 'char' { AbsLinguaggio.TChar }
     | 'string' { AbsLinguaggio.TStr }
     | 'void' { AbsLinguaggio.TVoid }
     | '[' Integer '..' Integer ']' Type { AbsLinguaggio.TArr $2 $4 $6 }
     | 'c_ptr' '(' Type ')' { AbsLinguaggio.TPtr $3 }

Block :: { AbsLinguaggio.Block }
Block : '{' ListStmt '}' { AbsLinguaggio.BBlock $2 }

ListStmt :: { [AbsLinguaggio.Stmt] }
ListStmt : {- empty -} { [] } | Stmt ListStmt { (:) $1 $2 }

Stmt :: { AbsLinguaggio.Stmt }
Stmt : Block { AbsLinguaggio.SBlock $1 }
     | Exp '=' Exp ';' { AbsLinguaggio.SAssign $1 $3 }
     | Ident '(' ListExp ')' ';' { AbsLinguaggio.SCall $1 $3 }
     | 'return' Exp ';' { AbsLinguaggio.SReturn $2 }
     | 'return' ';' { AbsLinguaggio.SReturnV }
     | TopDecl { AbsLinguaggio.SDecl $1 }
     | 'if' Exp Block { AbsLinguaggio.SIf $2 $3 }
     | 'if' Exp Block 'else' Block { AbsLinguaggio.SIfElse $2 $3 $5 }
     | 'while' Exp Block { AbsLinguaggio.SWhile $2 $3 }

ListExp :: { [AbsLinguaggio.Exp] }
ListExp : {- empty -} { [] }
        | Exp { (:[]) $1 }
        | Exp ',' ListExp { (:) $1 $3 }

Exp :: { AbsLinguaggio.Exp }
Exp : Exp '||' Exp1 { AbsLinguaggio.EOr $1 $3 } | Exp1 { $1 }

Exp1 :: { AbsLinguaggio.Exp }
Exp1 : Exp1 '&&' Exp2 { AbsLinguaggio.EAnd $1 $3 } | Exp2 { $1 }

Exp2 :: { AbsLinguaggio.Exp }
Exp2 : Exp3 '==' Exp3 { AbsLinguaggio.EEq $1 $3 }
     | Exp3 '!=' Exp3 { AbsLinguaggio.ENeq $1 $3 }
     | Exp3 '<' Exp3 { AbsLinguaggio.ELt $1 $3 }
     | Exp3 '<=' Exp3 { AbsLinguaggio.ELe $1 $3 }
     | Exp3 '>' Exp3 { AbsLinguaggio.EGt $1 $3 }
     | Exp3 '>=' Exp3 { AbsLinguaggio.EGe $1 $3 }
     | Exp3 { $1 }

Exp3 :: { AbsLinguaggio.Exp }
Exp3 : Exp3 '+' Exp4 { AbsLinguaggio.EAdd $1 $3 }
     | Exp3 '-' Exp4 { AbsLinguaggio.ESub $1 $3 }
     | Exp4 { $1 }

Exp4 :: { AbsLinguaggio.Exp }
Exp4 : Exp4 '*' Exp5 { AbsLinguaggio.EMul $1 $3 }
     | Exp4 '/' Exp5 { AbsLinguaggio.EDiv $1 $3 }
     | Exp5 { $1 }

Exp5 :: { AbsLinguaggio.Exp }
Exp5 : '-' Exp5 { AbsLinguaggio.ENeg $2 }
     | '!' Exp5 { AbsLinguaggio.ENot $2 }
     | '*' Exp5 { AbsLinguaggio.EDeref $2 }
     | 'c_ptrTo' '(' Exp ')' { AbsLinguaggio.EAddr $3 }
     | Exp6 { $1 }

Exp6 :: { AbsLinguaggio.Exp }
Exp6 : Exp6 '[' Exp ']' { AbsLinguaggio.EIdx $1 $3 }
     | Ident '(' ListExp ')' { AbsLinguaggio.ECall $1 $3 }
     | Exp7 { $1 }

Exp7 :: { AbsLinguaggio.Exp }
Exp7 : Ident { AbsLinguaggio.EVar $1 }
     | Integer { AbsLinguaggio.EInt $1 }
     | Double { AbsLinguaggio.EReal $1 }
     | Char { AbsLinguaggio.EChar $1 }
     | String { AbsLinguaggio.EStr $1 }
     | 'true' { AbsLinguaggio.ETrue }
     | 'false' { AbsLinguaggio.EFalse }
     | '(' Exp ')' { $2 }
{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
