parte2/ParLinguaggio.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from ParLinguaggio.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Char -> L_charac                                   (2)
	Double -> L_doubl                                  (3)
	Integer -> L_integ                                 (4)
	String -> L_quoted                                 (5)
	Program -> ListTopDecl                             (6)
	TopDecl -> 'var' Ident ':' Type ';'                (7)
	TopDecl -> 'var' Ident ':' Type '=' Exp ';'        (8)
	TopDecl -> 'proc' Ident '(' ListParam ')' ':' Type Block   (9)
	ListTopDecl ->                                     (10)
	ListTopDecl -> TopDecl ListTopDecl                 (11)
	Param -> Intent Ident ':' Type                     (12)
	ListParam ->                                       (13)
	ListParam -> Param                                 (14)
	ListParam -> Param ',' ListParam                   (15)
	Intent ->                                          (16)
	Intent -> 'ref'                                    (17)
	Type -> 'int'                                      (18)
	Type -> 'bool'                                     (19)
	Type -> 'real'                                     (20)
	Type -> 'char'                                     (21)
	Type -> 'string'                                   (22)
	Type -> 'void'                                     (23)
	Type -> '[' Integer '..' Integer ']' Type          (24)
	Type -> 'c_ptr' '(' Type ')'                       (25)
	Block -> '{' ListStmt '}'                          (26)
	ListStmt ->                                        (27)
	ListStmt -> Stmt ListStmt                          (28)
	Stmt -> Block                                      (29)
	Stmt -> Exp '=' Exp ';'                            (30)
	Stmt -> Ident '(' ListExp ')' ';'                  (31)
	Stmt -> 'return' Exp ';'                           (32)
	Stmt -> 'return' ';'                               (33)
	Stmt -> TopDecl                                    (34)
	Stmt -> 'if' Exp Block                             (35)
	Stmt -> 'if' Exp Block 'else' Block                (36)
	Stmt -> 'while' Exp Block                          (37)
	ListExp ->                                         (38)
	ListExp -> Exp                                     (39)
	ListExp -> Exp ',' ListExp                         (40)
	Exp -> Exp '||' Exp1                               (41)
	Exp -> Exp1                                        (42)
	Exp1 -> Exp1 '&&' Exp2                             (43)
	Exp1 -> Exp2                                       (44)
	Exp2 -> Exp3 '==' Exp3                             (45)
	Exp2 -> Exp3 '!=' Exp3                             (46)
	Exp2 -> Exp3 '<' Exp3                              (47)
	Exp2 -> Exp3 '<=' Exp3                             (48)
	Exp2 -> Exp3 '>' Exp3                              (49)
	Exp2 -> Exp3 '>=' Exp3                             (50)
	Exp2 -> Exp3                                       (51)
	Exp3 -> Exp3 '+' Exp4                              (52)
	Exp3 -> Exp3 '-' Exp4                              (53)
	Exp3 -> Exp4                                       (54)
	Exp4 -> Exp4 '*' Exp5                              (55)
	Exp4 -> Exp4 '/' Exp5                              (56)
	Exp4 -> Exp5                                       (57)
	Exp5 -> '-' Exp5                                   (58)
	Exp5 -> '!' Exp5                                   (59)
	Exp5 -> '*' Exp5                                   (60)
	Exp5 -> 'c_ptrTo' '(' Exp ')'                      (61)
	Exp5 -> Exp6                                       (62)
	Exp6 -> Exp6 '[' Exp ']'                           (63)
	Exp6 -> Ident '(' ListExp ')'                      (64)
	Exp6 -> Exp7                                       (65)
	Exp7 -> Ident                                      (66)
	Exp7 -> Integer                                    (67)
	Exp7 -> Double                                     (68)
	Exp7 -> Char                                       (69)
	Exp7 -> String                                     (70)
	Exp7 -> 'true'                                     (71)
	Exp7 -> 'false'                                    (72)
	Exp7 -> '(' Exp ')'                                (73)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'&&'           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'..'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	':'            { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'['            { PT _ (TS _ 20) }
	']'            { PT _ (TS _ 21) }
	'bool'         { PT _ (TS _ 22) }
	'c_ptr'        { PT _ (TS _ 23) }
	'c_ptrTo'      { PT _ (TS _ 24) }
	'char'         { PT _ (TS _ 25) }
	'else'         { PT _ (TS _ 26) }
	'false'        { PT _ (TS _ 27) }
	'if'           { PT _ (TS _ 28) }
	'int'          { PT _ (TS _ 29) }
	'proc'         { PT _ (TS _ 30) }
	'real'         { PT _ (TS _ 31) }
	'ref'          { PT _ (TS _ 32) }
	'return'       { PT _ (TS _ 33) }
	'string'       { PT _ (TS _ 34) }
	'true'         { PT _ (TS _ 35) }
	'var'          { PT _ (TS _ 36) }
	'void'         { PT _ (TS _ 37) }
	'while'        { PT _ (TS _ 38) }
	'{'            { PT _ (TS _ 39) }
	'||'           { PT _ (TS _ 40) }
	'}'            { PT _ (TS _ 41) }
	L_Ident        { PT _ (TV $$) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Char            rule  2
	Double          rule  3
	Integer         rule  4
	String          rule  5
	Program         rule  6
	TopDecl         rules 7, 8, 9
	ListTopDecl     rules 10, 11
	Param           rule  12
	ListParam       rules 13, 14, 15
	Intent          rules 16, 17
	Type            rules 18, 19, 20, 21, 22, 23, 24, 25
	Block           rule  26
	ListStmt        rules 27, 28
	Stmt            rules 29, 30, 31, 32, 33, 34, 35, 36, 37
	ListExp         rules 38, 39, 40
	Exp             rules 41, 42
	Exp1            rules 43, 44
	Exp2            rules 45, 46, 47, 48, 49, 50, 51
	Exp3            rules 52, 53, 54
	Exp4            rules 55, 56, 57
	Exp5            rules 58, 59, 60, 61, 62
	Exp6            rules 63, 64, 65
	Exp7            rules 66, 67, 68, 69, 70, 71, 72, 73

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'proc'         shift, and enter state 6
	'var'          shift, and enter state 7
	%eof           reduce using rule 10

	Program        goto state 3
	TopDecl        goto state 4
	ListTopDecl    goto state 5

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListTopDecl -> TopDecl . ListTopDecl                (rule 11)

	'proc'         shift, and enter state 6
	'var'          shift, and enter state 7
	%eof           reduce using rule 10

	TopDecl        goto state 4
	ListTopDecl    goto state 10

State 5

	Program -> ListTopDecl .                            (rule 6)

	%eof           reduce using rule 6


State 6

	TopDecl -> 'proc' . Ident '(' ListParam ')' ':' Type Block    (rule 9)

	L_Ident        shift, and enter state 2

	Ident          goto state 9

State 7

	TopDecl -> 'var' . Ident ':' Type ';'               (rule 7)
	TopDecl -> 'var' . Ident ':' Type '=' Exp ';'       (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 8

State 8

	TopDecl -> 'var' Ident . ':' Type ';'               (rule 7)
	TopDecl -> 'var' Ident . ':' Type '=' Exp ';'       (rule 8)

	':'            shift, and enter state 12


State 9

	TopDecl -> 'proc' Ident . '(' ListParam ')' ':' Type Block    (rule 9)

	'('            shift, and enter state 11


State 10

	ListTopDecl -> TopDecl ListTopDecl .                (rule 11)

	%eof           reduce using rule 11


State 11

	TopDecl -> 'proc' Ident '(' . ListParam ')' ':' Type Block    (rule 9)

	')'            reduce using rule 13
	'ref'          shift, and enter state 25
	L_Ident        reduce using rule 16

	Param          goto state 22
	ListParam      goto state 23
	Intent         goto state 24

State 12

	TopDecl -> 'var' Ident ':' . Type ';'               (rule 7)
	TopDecl -> 'var' Ident ':' . Type '=' Exp ';'       (rule 8)

	'['            shift, and enter state 14
	'bool'         shift, and enter state 15
	'c_ptr'        shift, and enter state 16
	'char'         shift, and enter state 17
	'int'          shift, and enter state 18
	'real'         shift, and enter state 19
	'string'       shift, and enter state 20
	'void'         shift, and enter state 21

	Type           goto state 13

State 13

	TopDecl -> 'var' Ident ':' Type . ';'               (rule 7)
	TopDecl -> 'var' Ident ':' Type . '=' Exp ';'       (rule 8)

	';'            shift, and enter state 32
	'='            shift, and enter state 33


State 14

	Type -> '[' . Integer '..' Integer ']' Type         (rule 24)

	L_integ        shift, and enter state 31

	Integer        goto state 30

State 15

	Type -> 'bool' .                                    (rule 19)

	')'            reduce using rule 19
	','            reduce using rule 19
	';'            reduce using rule 19
	'='            reduce using rule 19
	'{'            reduce using rule 19


State 16

	Type -> 'c_ptr' . '(' Type ')'                      (rule 25)

	'('            shift, and enter state 29


State 17

	Type -> 'char' .                                    (rule 21)

	')'            reduce using rule 21
	','            reduce using rule 21
	';'            reduce using rule 21
	'='            reduce using rule 21
	'{'            reduce using rule 21


State 18

	Type -> 'int' .                                     (rule 18)

	')'            reduce using rule 18
	','            reduce using rule 18
	';'            reduce using rule 18
	'='            reduce using rule 18
	'{'            reduce using rule 18


State 19

	Type -> 'real' .                                    (rule 20)

	')'            reduce using rule 20
	','            reduce using rule 20
	';'            reduce using rule 20
	'='            reduce using rule 20
	'{'            reduce using rule 20


State 20

	Type -> 'string' .                                  (rule 22)

	')'            reduce using rule 22
	','            reduce using rule 22
	';'            reduce using rule 22
	'='            reduce using rule 22
	'{'            reduce using rule 22


State 21

	Type -> 'void' .                                    (rule 23)

	')'            reduce using rule 23
	','            reduce using rule 23
	';'            reduce using rule 23
	'='            reduce using rule 23
	'{'            reduce using rule 23


State 22

	ListParam -> Param .                                (rule 14)
	ListParam -> Param . ',' ListParam                  (rule 15)

	')'            reduce using rule 14
	','            shift, and enter state 28


State 23

	TopDecl -> 'proc' Ident '(' ListParam . ')' ':' Type Block    (rule 9)

	')'            shift, and enter state 27


State 24

	Param -> Intent . Ident ':' Type                    (rule 12)

	L_Ident        shift, and enter state 2

	Ident          goto state 26

State 25

	Intent -> 'ref' .                                   (rule 17)

	L_Ident        reduce using rule 17


State 26

	Param -> Intent Ident . ':' Type                    (rule 12)

	':'            shift, and enter state 61


State 27

	TopDecl -> 'proc' Ident '(' ListParam ')' . ':' Type Block    (rule 9)

	':'            shift, and enter state 60


State 28

	ListParam -> Param ',' . ListParam                  (rule 15)

	')'            reduce using rule 13
	'ref'          shift, and enter state 25
	L_Ident        reduce using rule 16

	Param          goto state 22
	ListParam      goto state 59
	Intent         goto state 24

State 29

	Type -> 'c_ptr' '(' . Type ')'                      (rule 25)

	'['            shift, and enter state 14
	'bool'         shift, and enter state 15
	'c_ptr'        shift, and enter state 16
	'char'         shift, and enter state 17
	'int'          shift, and enter state 18
	'real'         shift, and enter state 19
	'string'       shift, and enter state 20
	'void'         shift, and enter state 21

	Type           goto state 58

State 30

	Type -> '[' Integer . '..' Integer ']' Type         (rule 24)

	'..'           shift, and enter state 57


State 31

	Integer -> L_integ .                                (rule 4)

	'!='           reduce using rule 4
	'&&'           reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'+'            reduce using rule 4
	','            reduce using rule 4
	'-'            reduce using rule 4
	'..'           reduce using rule 4
	'/'            reduce using rule 4
	';'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'='            reduce using rule 4
	'=='           reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	'['            reduce using rule 4
	']'            reduce using rule 4
	'{'            reduce using rule 4
	'||'           reduce using rule 4


State 32

	TopDecl -> 'var' Ident ':' Type ';' .               (rule 7)

	'!'            reduce using rule 7
	'('            reduce using rule 7
	'*'            reduce using rule 7
	'-'            reduce using rule 7
	'c_ptrTo'      reduce using rule 7
	'false'        reduce using rule 7
	'if'           reduce using rule 7
	'proc'         reduce using rule 7
	'return'       reduce using rule 7
	'true'         reduce using rule 7
	'var'          reduce using rule 7
	'while'        reduce using rule 7
	'{'            reduce using rule 7
	'}'            reduce using rule 7
	L_Ident        reduce using rule 7
	L_charac       reduce using rule 7
	L_doubl        reduce using rule 7
	L_integ        reduce using rule 7
	L_quoted       reduce using rule 7
	%eof           reduce using rule 7


State 33

	TopDecl -> 'var' Ident ':' Type '=' . Exp ';'       (rule 8)

	'!'            shift, and enter state 47
	'('            shift, and enter state 48
	'*'            shift, and enter state 49
	'-'            shift, and enter state 50
	'c_ptrTo'      shift, and enter state 51
	'false'        shift, and enter state 52
	'true'         shift, and enter state 53
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 54
	L_doubl        shift, and enter state 55
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 56

	Ident          goto state 34
	Char           goto state 35
	Double         goto state 36
	Integer        goto state 37
	String         goto state 38
	Exp            goto state 39
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46

State 34

	Exp6 -> Ident . '(' ListExp ')'                     (rule 64)
	Exp7 -> Ident .                                     (rule 66)

	'!='           reduce using rule 66
	'&&'           reduce using rule 66
	'('            shift, and enter state 85
	')'            reduce using rule 66
	'*'            reduce using rule 66
	'+'            reduce using rule 66
	','            reduce using rule 66
	'-'            reduce using rule 66
	'/'            reduce using rule 66
	';'            reduce using rule 66
	'<'            reduce using rule 66
	'<='           reduce using rule 66
	'='            reduce using rule 66
	'=='           reduce using rule 66
	'>'            reduce using rule 66
	'>='           reduce using rule 66
	'['            reduce using rule 66
	']'            reduce using rule 66
	'{'            reduce using rule 66
	'||'           reduce using rule 66


State 35

	Exp7 -> Char .                                      (rule 69)

	'!='           reduce using rule 69
	'&&'           reduce using rule 69
	')'            reduce using rule 69
	'*'            reduce using rule 69
	'+'            reduce using rule 69
	','            reduce using rule 69
	'-'            reduce using rule 69
	'/'            reduce using rule 69
	';'            reduce using rule 69
	'<'            reduce using rule 69
	'<='           reduce using rule 69
	'='            reduce using rule 69
	'=='           reduce using rule 69
	'>'            reduce using rule 69
	'>='           reduce using rule 69
	'['            reduce using rule 69
	']'            reduce using rule 69
	'{'            reduce using rule 69
	'||'           reduce using rule 69


State 36

	Exp7 -> Double .                                    (rule 68)

	'!='           reduce using rule 68
	'&&'           reduce using rule 68
	')'            reduce using rule 68
	'*'            reduce using rule 68
	'+'            reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'/'            reduce using rule 68
	';'            reduce using rule 68
	'<'            reduce using rule 68
	'<='           reduce using rule 68
	'='            reduce using rule 68
	'=='           reduce using rule 68
	'>'            reduce using rule 68
	'>='           reduce using rule 68
	'['            reduce using rule 68
	']'            reduce using rule 68
	'{'            reduce using rule 68
	'||'           reduce using rule 68


State 37

	Exp7 -> Integer .                                   (rule 67)

	'!='           reduce using rule 67
	'&&'           reduce using rule 67
	')'            reduce using rule 67
	'*'            reduce using rule 67
	'+'            reduce using rule 67
	','            reduce using rule 67
	'-'            reduce using rule 67
	'/'            reduce using rule 67
	';'            reduce using rule 67
	'<'            reduce using rule 67
	'<='           reduce using rule 67
	'='            reduce using rule 67
	'=='           reduce using rule 67
	'>'            reduce using rule 67
	'>='           reduce using rule 67
	'['            reduce using rule 67
	']'            reduce using rule 67
	'{'            reduce using rule 67
	'||'           reduce using rule 67


State 38

	Exp7 -> String .                                    (rule 70)

	'!='           reduce using rule 70
	'&&'           reduce using rule 70
	')'            reduce using rule 70
	'*'            reduce using rule 70
	'+'            reduce using rule 70
	','            reduce using rule 70
	'-'            reduce using rule 70
	'/'            reduce using rule 70
	';'            reduce using rule 70
	'<'            reduce using rule 70
	'<='           reduce using rule 70
	'='            reduce using rule 70
	'=='           reduce using rule 70
	'>'            reduce using rule 70
	'>='           reduce using rule 70
	'['            reduce using rule 70
	']'            reduce using rule 70
	'{'            reduce using rule 70
	'||'           reduce using rule 70


State 39

	TopDecl -> 'var' Ident ':' Type '=' Exp . ';'       (rule 8)
	Exp -> Exp . '||' Exp1                              (rule 41)

	';'            shift, and enter state 83
	'||'           shift, and enter state 84


State 40

	Exp -> Exp1 .                                       (rule 42)
	Exp1 -> Exp1 . '&&' Exp2                            (rule 43)

	'&&'           shift, and enter state 82
	')'            reduce using rule 42
	','            reduce using rule 42
	';'            reduce using rule 42
	'='            reduce using rule 42
	']'            reduce using rule 42
	'{'            reduce using rule 42
	'||'           reduce using rule 42


State 41

	Exp1 -> Exp2 .                                      (rule 44)

	'&&'           reduce using rule 44
	')'            reduce using rule 44
	','            reduce using rule 44
	';'            reduce using rule 44
	'='            reduce using rule 44
	']'            reduce using rule 44
	'{'            reduce using rule 44
	'||'           reduce using rule 44


State 42

	Exp2 -> Exp3 . '==' Exp3                            (rule 45)
	Exp2 -> Exp3 . '!=' Exp3                            (rule 46)
	Exp2 -> Exp3 . '<' Exp3                             (rule 47)
	Exp2 -> Exp3 . '<=' Exp3                            (rule 48)
	Exp2 -> Exp3 . '>' Exp3                             (rule 49)
	Exp2 -> Exp3 . '>=' Exp3                            (rule 50)
	Exp2 -> Exp3 .                                      (rule 51)
	Exp3 -> Exp3 . '+' Exp4                             (rule 52)
	Exp3 -> Exp3 . '-' Exp4                             (rule 53)

	'!='           shift, and enter state 74
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'+'            shift, and enter state 75
	','            reduce using rule 51
	'-'            shift, and enter state 76
	';'            reduce using rule 51
	'<'            shift, and enter state 77
	'<='           shift, and enter state 78
	'='            reduce using rule 51
	'=='           shift, and enter state 79
	'>'            shift, and enter state 80
	'>='           shift, and enter state 81
	']'            reduce using rule 51
	'{'            reduce using rule 51
	'||'           reduce using rule 51


State 43

	Exp3 -> Exp4 .                                      (rule 54)
	Exp4 -> Exp4 . '*' Exp5                             (rule 55)
	Exp4 -> Exp4 . '/' Exp5                             (rule 56)

	'!='           reduce using rule 54
	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*'            shift, and enter state 72
	'+'            reduce using rule 54
	','            reduce using rule 54
	'-'            reduce using rule 54
	'/'            shift, and enter state 73
	';'            reduce using rule 54
	'<'            reduce using rule 54
	'<='           reduce using rule 54
	'='            reduce using rule 54
	'=='           reduce using rule 54
	'>'            reduce using rule 54
	'>='           reduce using rule 54
	']'            reduce using rule 54
	'{'            reduce using rule 54
	'||'           reduce using rule 54


State 44

	Exp4 -> Exp5 .                                      (rule 57)

	'!='           reduce using rule 57
	'&&'           reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'/'            reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'='            reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	']'            reduce using rule 57
	'{'            reduce using rule 57
	'||'           reduce using rule 57


State 45

	Exp5 -> Exp6 .                                      (rule 62)
	Exp6 -> Exp6 . '[' Exp ']'                          (rule 63)

	'!='           reduce using rule 62
	'&&'           reduce using rule 62
	')'            reduce using rule 62
	'*'            reduce using rule 62
	'+'            reduce using rule 62
	','            reduce using rule 62
	'-'            reduce using rule 62
	'/'            reduce using rule 62
	';'            reduce using rule 62
	'<'            reduce using rule 62
	'<='           reduce using rule 62
	'='            reduce using rule 62
	'=='           reduce using rule 62
	'>'            reduce using rule 62
	'>='           reduce using rule 62
	'['            shift, and enter state 71
	']'            reduce using rule 62
	'{'            reduce using rule 62
	'||'           reduce using rule 62


State 46

	Exp6 -> Exp7 .                                      (rule 65)

	'!='           reduce using rule 65
	'&&'           reduce using rule 65
	')'            reduce using rule 65
	'*'            reduce using rule 65
	'+'            reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	'/'            reduce using rule 65
	';'            reduce using rule 65
	'<'            reduce using rule 65
	'<='           reduce using rule 65
	'='            reduce using rule 65
	'=='           reduce using rule 65
	'>'            reduce using rule 65
	'>='           reduce using rule 65
	'['            reduce using rule 65
	']'            reduce using rule 65
	'{'            reduce using rule 65
	'||'           reduce using rule 65


State 47

	Exp5 -> '!' . Exp5                                  (rule 59)

	'!'            shift, and enter state 47
	'('            shift, and enter state 48
	'*'            shift, and enter state 49
	'-'            shift, and enter state 50
	'c_ptrTo'      shift, and enter state 51
	'false'        shift, and enter state 52
	'true'         shift, and enter state 53
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 54
	L_doubl        shift, and enter state 55
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 56

	Ident          goto state 34
	Char           goto state 35
	Double         goto state 36
	Integer        goto state 37
	String         goto state 38
	Exp5           goto state 70
	Exp6           goto state 45
	Exp7           goto state 46

State 48

	Exp7 -> '(' . Exp ')'                               (rule 73)

	'!'            shift, and enter state 47
	'('            shift, and enter state 48
	'*'            shift, and enter state 49
	'-'            shift, and enter state 50
	'c_ptrTo'      shift, and enter state 51
	'false'        shift, and enter state 52
	'true'         shift, and enter state 53
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 54
	L_doubl        shift, and enter state 55
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 56
